samples/SalesforceFoundation/Cumulus/src/objects/Data_Import_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Account_Custom_Unique_ID__c</fullName>
        <description>An optional Unique Id field to use for Organization Account matching</description>
        <inlineHelpText>An optional Unique Id field to use for Organization Account matching</inlineHelpText>
        <label>Account Custom Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Matching_Rule__c</fullName>
        <description>Specifies which rule to follow when trying to match Accounts in Data Import records against existing Accounts.</description>
        <inlineHelpText>Specifies which rule to follow when trying to match Accounts in Data Import records against existing Accounts.</inlineHelpText>
        <label>Account Matching Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <defaultValue>20</defaultValue>
        <description>The number of NPSP Data Import records to process in each batch.</description>
        <inlineHelpText>The number of NPSP Data Import records to process in each batch.</inlineHelpText>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Custom_Unique_ID__c</fullName>
        <description>An optional Unique Id field to use for Contact matching</description>
        <inlineHelpText>An optional Unique Id field to use for Contact matching</inlineHelpText>
        <label>Contact Custom Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Matching_Rule__c</fullName>
        <description>Specifies which rule to follow when trying to match Contacts in Data Import records against existing Contacts.</description>
        <inlineHelpText>Specifies which rule to follow when trying to match Contacts in Data Import records against existing Contacts.</inlineHelpText>
        <label>Contact Matching Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Import Settings</label>
</CustomObject>